--- a/index.html
+++ b/index.html
@@ -70,18 +70,21 @@
 		</div>
 	</main>
 	<footer>
-		<div class="contenedor-imagen">
-			<img src="https://images.unsplash.com/photo-1497215728101-856f4ea42174?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80" alt="">
-		</div>
-		<nav class="navbar">
-				<div class="contenedor">
-				<a href="#">Inicio</a>
-				<a href="#">Servicios</a>
-				<a href="#">Precios</a>
-				<a href="#">Compañía</a>
-				<a href="#">Soporte</a>
-			</div>
-		</nav>
+		<p>Footer</p>
 	</footer>
 </body>
 </html>
+<<!--
+<div class="contenedor-imagen">
+  <img src="https://images.unsplash.com/photo-1497215728101-856f4ea42174?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80" alt="">
+</div>
+<nav class="navbar">
+    <div class="contenedor">
+    <a href="#">Inicio</a>
+    <a href="#">Servicios</a>
+    <a href="#">Precios</a>
+    <a href="#">Compañía</a>
+    <a href="#">Soporte</a>
+  </div>
+</nav>
+-->
