--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Página Principal | YouTube</title>
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Oswald&display=swap" rel="stylesheet"> 
+	<title>Ey cacha que</title>
+  <meta name="description" content="">
 	<link rel="stylesheet" href="css/estilos.css">
 </head>
+
+
 <body>
 	<div class="contenedor active" id="contenedor">
 		<header class="header">
