--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Ey cacha que</title>
   <meta name="description" content="">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Oswald&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/estilos.css">
 </head>
 
@@ -15,8 +17,8 @@
 	<div class="contenedor active" id="contenedor">
 		<header class="header">
 			<div class="contenedor-logo">
-				<button id="boton-menu" class="boton-menu"><i class="fas fa-bars"></i></button>
-				<a href="#" class="logo"><i class="fas fa-play"></i> <span>FalconMasters</span></a>
+				<button class="boton-menu"><i class="fas fa-bars"></i>></button>
+				<a href="#" class="logo"><i class="fas fa-utensils"></i> <span>Buddies</span></a>
 			</div>
 
 			<div class="barra-busqueda">
@@ -33,7 +35,7 @@
 		</header>
 
 		<nav class="menu-lateral">
-			<a href="#" class="active"><i class="fas fa-home"></i> Página Principal</a>
+			<a href="#" class="active"><i class="fas fa-home"></i> Inicio </a>
 			<a href="#"><i class="fas fa-fire"></i> Tendencias</a>
 			<a href="#"><i class="fas fa-star"></i> Suscripciones</a>
 
@@ -68,8 +70,7 @@
 			</div>
 		</main>
 	</div>
-	
-	<script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
-	<script src="js/main.js"></script>
+  
+	<script src="https://kit.fontawesome.com/55150ed88a.js" crossorigin="anonymous"></script>
 </body>
 </html>
