--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<div class="contenedor active" id="contenedor">
 		<header class="header">
 			<div class="contenedor-logo">
-				<button class="boton-menu"><i class="fas fa-bars"></i>></button>
+				<button class="boton-menu"><i class="fas fa-bars"></i></button>
 				<a href="#" class="logo"><i class="fas fa-utensils"></i> <span>Buddies</span></a>
 			</div>
 
@@ -30,7 +30,7 @@
 				<button><i class="fas fa-upload"></i></button>
 				<button><i class="fas fa-th"></i></button>
 				<button><i class="fas fa-bell"></i></button>
-				<a href="#" class="avatar"><img src="img/avatar.jpg" alt=""></a>
+				<a href="#" class="avatar"><img src="imagenes/ey_cacha.svg" alt=""></a>
 			</div>
 		</header>
 
