--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
 
 			<div class="botones-header">
 				<button><i class="fas fa-upload"></i></button>
-				<button><i class="fas fa-th"></i></button>
-				<button><i class="fas fa-bell"></i></button>
+				<button><i class="fas fa-angry"></i></button>
+				<button><i class="fas fa-cogs"></i></button>
+        <button><i class="fas fa-bell"></i></button>
 				<a href="#" class="avatar"><img src="imagenes/ey_cacha.svg" alt=""></a>
 			</div>
 		</header>
