--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 			</div>
 
 			<div class="botones-header">
-				<button><i class="fas fa-upload"></i></button>
+				<button><i class="fas fa-history"></i></button>
 				<button><i class="fas fa-angry"></i></button>
-				<button><i class="fas fa-cogs"></i></button>
         <button><i class="fas fa-bell"></i></button>
+        <button><i class="fas fa-cogs"></i></button>
 				<a href="#" class="avatar"><img src="imagenes/ey_cacha.svg" alt=""></a>
 			</div>
 		</header>
@@ -38,19 +38,20 @@
 		<nav class="menu-lateral">
 			<a href="#" class="active"><i class="fas fa-home"></i> Inicio </a>
 			<a href="#"><i class="fas fa-fire"></i> Tendencias</a>
-			<a href="#"><i class="fas fa-star"></i> Suscripciones</a>
+			<a href="#"><i class="fas fa-sort-amount-down-alt"></i> Filtrar</a>
 
 			<hr>
 
-			<a href="#"><i class="fas fa-folder"></i> HTML y CSS</a>
-			<a href="#"><i class="fas fa-folder"></i> Responsive Design</a>
-			<a href="#"><i class="fas fa-folder"></i> Bootstrap</a>
+			<a href="#"><i class="fas fa-user"></i> Mi perfil</a>
+			<a href="#"><i class="fas fa-star"></i> Favoritos</a>
+			<a href="#"><i class="fas fa-star"></i> Mis amigos</a>
+      <a href="#"><i class="fas fa-comment"></i> Mensajes</a>
 
 			<hr>
 
-			<a href="#"><i class="fas fa-folder"></i> Javascript</a>
-			<a href="#"><i class="fas fa-folder"></i> React</a>
-			<a href="#"><i class="fas fa-folder"></i> PHP y MYSQL</a>
+			<a href="#"><i class="fas fa-plus"></i> Compartir Receta</a>
+			<a href="#"><i class="fas fa-calendar-week"></i> Organizate</a>
+			<a href="#"><i class="fas fa-lock-open"></i> ProBuddies</a>
 		</nav>
 
 		<main class="main">
