--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 			<hr>
 
 			<a href="#"><i class="fas fa-user"></i> Mi perfil</a>
+      <a href="#"><i class="fas fa-user-friends"></i> Mis amigos</a>
 			<a href="#"><i class="fas fa-star"></i> Favoritos</a>
-			<a href="#"><i class="fas fa-star"></i> Mis amigos</a>
       <a href="#"><i class="fas fa-comment"></i> Mensajes</a>
 
 			<hr>
