--- a/index.html
+++ b/index.html
@@ -54,21 +54,21 @@
 			<a href="#"><i class="fas fa-lock-open"></i> ProBuddies</a>
 		</nav>
 
-		<main class="main">
-			<h3 class="titulo">Videos Recomendados</h3>
-			<div class="grid-videos">
-				<a href="#" class="video"><img src="https://via.placeholder.com/500x281?text=Placeholder" alt=""></a>
-				<a href="#" class="video"><img src="https://via.placeholder.com/500x281?text=Placeholder" alt=""></a>
-				<a href="#" class="video"><img src="https://via.placeholder.com/500x281?text=Placeholder" alt=""></a>
-				<a href="#" class="video"><img src="https://via.placeholder.com/500x281?text=Placeholder" alt=""></a>
-				<a href="#" class="video"><img src="https://via.placeholder.com/500x281?text=Placeholder" alt=""></a>
-				<a href="#" class="video"><img src="https://via.placeholder.com/500x281?text=Placeholder" alt=""></a>
-				<a href="#" class="video"><img src="https://via.placeholder.com/500x281?text=Placeholder" alt=""></a>
-				<a href="#" class="video"><img src="https://via.placeholder.com/500x281?text=Placeholder" alt=""></a>
-				<a href="#" class="video"><img src="https://via.placeholder.com/500x281?text=Placeholder" alt=""></a>
-				<a href="#" class="video"><img src="https://via.placeholder.com/500x281?text=Placeholder" alt=""></a>
-				<a href="#" class="video"><img src="https://via.placeholder.com/500x281?text=Placeholder" alt=""></a>
-				<a href="#" class="video"><img src="https://via.placeholder.com/500x281?text=Placeholder" alt=""></a>
+		<main class="mimagen
+			<h3 class="titulo">Recetas Recomendadas</h3>
+			<div class="grid-imagenes">
+				<a href="#" class="imagen"><img src="https://cdn2.cocinadelirante.com/sites/default/files/styles/gallerie/public/rollitosdejamonyqueso_1.jpg" alt=""></a>
+				<a href="#" class="imagen"><img src="https://via.placeholder.com/500x281?text=Placeholder" alt=""></a>
+				<a href="#" class="imagen"><img src="https://via.placeholder.com/500x281?text=Placeholder" alt=""></a>
+				<a href="#" class="imagen"><img src="https://via.placeholder.com/500x281?text=Placeholder" alt=""></a>
+				<a href="#" class="imagen"><img src="https://via.placeholder.com/500x281?text=Placeholder" alt=""></a>
+				<a href="#" class="imagen"><img src="https://via.placeholder.com/500x281?text=Placeholder" alt=""></a>
+				<a href="#" class="imagen"><img src="https://via.placeholder.com/500x281?text=Placeholder" alt=""></a>
+				<a href="#" class="imagen"><img src="https://via.placeholder.com/500x281?text=Placeholder" alt=""></a>
+				<a href="#" class="imagen"><img src="https://via.placeholder.com/500x281?text=Placeholder" alt=""></a>
+				<a href="#" class="imagen"><img src="https://via.placeholder.com/500x281?text=Placeholder" alt=""></a>
+				<a href="#" class="imagen"><img src="https://via.placeholder.com/500x281?text=Placeholder" alt=""></a>
+				<a href="#" class="imagen"><img src="https://via.placeholder.com/500x281?text=Placeholder" alt=""></a>
 			</div>
 		</main>
 	</div>
