--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
 			<h3 class="titulo">Recetas Recomendadas</h3>
 			<div class="grid-imagenes">
 				<a href="#" class="imagen"><img src="https://cdn2.cocinadelirante.com/sites/default/files/styles/gallerie/public/rollitosdejamonyqueso_1.jpg" alt=""></a>
-				<a href="#" class="imagen"><img src="https://via.placeholder.com/500x281?text=Placeholder" alt=""></a>
-				<a href="#" class="imagen"><img src="https://via.placeholder.com/500x281?text=Placeholder" alt=""></a>
-				<a href="#" class="imagen"><img src="https://via.placeholder.com/500x281?text=Placeholder" alt=""></a>
-				<a href="#" class="imagen"><img src="https://via.placeholder.com/500x281?text=Placeholder" alt=""></a>
-				<a href="#" class="imagen"><img src="https://via.placeholder.com/500x281?text=Placeholder" alt=""></a>
+				<a href="#" class="imagen"><img src="https://www.hola.com/imagenes/cocina/recetas/20191018151890/alimentos-temporada-castana-recetas/0-734-488/castana-recetas-m.jpg" alt=""></a>
+				<a href="#" class="imagen"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTAwANxOIl3U63jCwXpdvY2BygQpj0z6-vayw&usqp=CAU" alt=""></a>
+				<a href="#" class="imagen"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRzx4Q0nf5KyRIlovGZqfRSms7jLH2uHEURhA&usqp=CAU" alt=""></a>
+				<a href="#" class="imagen"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT6ydbxfdubdWoqXlR67q5nLSqunHAP3Bg8sg&usqp=CAU" alt=""></a>
+				<a href="#" class="imagen"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRgNWJCRTqMh3V8heEupjOzrnY9kt-R15CG0A&usqp=CAU" alt=""></a>
 				<a href="#" class="imagen"><img src="https://via.placeholder.com/500x281?text=Placeholder" alt=""></a>
 				<a href="#" class="imagen"><img src="https://via.placeholder.com/500x281?text=Placeholder" alt=""></a>
 				<a href="#" class="imagen"><img src="https://via.placeholder.com/500x281?text=Placeholder" alt=""></a>
