--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			<a href="#"><i class="fas fa-lock-open"></i> ProBuddies</a>
 		</nav>
 
-		<main class="mimagen
+		<main class="imagen">
 			<h3 class="titulo">Recetas Recomendadas</h3>
 			<div class="grid-imagenes">
 				<a href="#" class="imagen"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS7ATS6ZdaHcFtJEV5ent8Frj7Kpd1GUYMYSg&usqp=CAU" alt=""></a>
@@ -76,4 +76,3 @@
 	<script src="https://kit.fontawesome.com/55150ed88a.js" crossorigin="anonymous"></script>
 </body>
 </html>
-https://cdn2.cocinadelirante.com/sites/default/files/styles/gallerie/public/rollitosdejamonyqueso_1.jpg
