--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<main class="imagen">
 			<h3 class="titulo">Recetas Recomendadas</h3>
 			<div class="grid-imagenes">
-				<a href="#" class="imagen"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS7ATS6ZdaHcFtJEV5ent8Frj7Kpd1GUYMYSg&usqp=CAU" alt=""></a>
+				<a href="#" class="imagen"><img src="imagenes/892d65cba81876ed7c340ae9ce7663d3_DCS_MARZO_INSTAGRAM-04_1200_600.jpg" alt=""></a>
 				<a href="#" class="imagen"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTogwoshUF_LdswDm5xm-6rDpn2CzM8iSsrtQ&usqp=CAU" alt=""></a>
 				<a href="#" class="imagen"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTAwANxOIl3U63jCwXpdvY2BygQpj0z6-vayw&usqp=CAU" alt=""></a>
 				<a href="#" class="imagen"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRzx4Q0nf5KyRIlovGZqfRSms7jLH2uHEURhA&usqp=CAU" alt=""></a>
