--- a/index.html
+++ b/index.html
@@ -55,20 +55,48 @@
 		</nav>
 
 		<main class="imagen">
-			<h3 class="titulo">Recetas Recomendadas</h3>
-			<div class="grid-imagenes">
-				<a href="#" class="imagen"><img src="imagenes/892d65cba81876ed7c340ae9ce7663d3_DCS_MARZO_INSTAGRAM-04_1200_600.jpg" alt=""></a>
-				<a href="#" class="imagen"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTogwoshUF_LdswDm5xm-6rDpn2CzM8iSsrtQ&usqp=CAU" alt=""></a>
-				<a href="#" class="imagen"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTAwANxOIl3U63jCwXpdvY2BygQpj0z6-vayw&usqp=CAU" alt=""></a>
-				<a href="#" class="imagen"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRzx4Q0nf5KyRIlovGZqfRSms7jLH2uHEURhA&usqp=CAU" alt=""></a>
-				<a href="#" class="imagen"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT6ydbxfdubdWoqXlR67q5nLSqunHAP3Bg8sg&usqp=CAU" alt=""></a>
-				<a href="#" class="imagen"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRgNWJCRTqMh3V8heEupjOzrnY9kt-R15CG0A&usqp=CAU" alt=""></a>
-				<a href="#" class="imagen"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSoHS9nMQklFBlPFfgupRM3SoyxA0vIGdSXWw&usqp=CAU" alt=""></a>
-				<a href="#" class="imagen"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTcboQH7pFLzoqRXJyTOkqqs0TPZ5-FrKBzJw&usqp=CAU" alt=""></a>
-				<a href="#" class="imagen"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTMl1uo0puVt_ShjyPJY0U3UKG8x4g9i0JufQ&usqp=CAU" alt=""></a>
-				<a href="#" class="imagen"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRnoyAAuTcC_lR9Tz3AygvO2Op-06hG58X1yw&usqp=CAU" alt=""></a>
-				<a href="#" class="imagen"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTzbZ8_SCYjxaaJwQAE8JaJMD8G5g-jbQYIGA&usqp=CAU" alt=""></a>
-				<a href="#" class="imagen"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSPmMvIDi2gna7ApobnDALu2BaQlW1QTSVBIA&usqp=CAU" alt=""></a>
+			<h3 class="titulo">Recetas para ti</h3>
+
+
+			<div class="recetas_recomendadas contenido">
+        <div class="contenido-titulo-controles">
+          <h3>Recetas recomendadas</h3>
+          <div class="indicadores"></div>
+        </div>
+
+        <div class="contenido_principal">
+          <button role="button" id="flecha-izquierda" class="flecha-izquierda"><i class="fas 
+            fa-angle-left"></i></button>
+
+            <div class="contenido-carrusel">
+              <div class="carrusel">
+                <div class="receta">
+                  <a href="#" class="imagen"><img src="imagenes/892d65cba81876ed7c340ae9ce7663d3_DCS_MARZO_INSTAGRAM-04_1200_600.jpg" alt=""></a>
+                </div>
+                <div class="receta">
+                  <a href="#" class="imagen"><img src="imagenes/1.jpg" alt=""></a>
+                </div>
+                <div class="receta">
+                  <a href="#" class="imagen"><img src="imagenes/2.jpg" alt=""></a>
+                </div>
+                <div class="receta">
+                  <a href="#" class="imagen"><img src="imagenes/3.jpg" alt=""></a>
+                </div>
+                <div class="receta">
+                  <a href="#" class="imagen"><img src="imagenes/4.jpg" alt=""></a>
+                </div>
+                <div class="receta">
+                  <a href="#" class="imagen"><img src="imagenes/5.jpg" alt=""></a>
+                </div>
+                <div class="receta">
+                  <a href="#" class="imagen"><img src="imagenes/6.jpg" alt=""></a>
+                </div>
+              </div> 
+            </div>
+
+          <button role="button" id="flecha-derecha" class="flecha-derecha"><i class="fas 
+            fa-angle-right"></i></button>
+        </div>
 			</div>
 		</main>
 	</div>
