--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			<a href="#"><i class="fas fa-lock-open"></i> ProBuddies</a>
 		</nav>
 
-		<main class="imagen">
+		<main>
 			<h3 class="titulo">Recetas para ti</h3>
 
 
