--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
 			<div class="recetas_recomendadas contenido">
         <div class="contenido-titulo-controles">
           <h3>Recetas recomendadas</h3>
-          <div class="indicadores"></div>
+          <div class="indicadores">
+            <button></button>
+            <button></button>
+          </div>
         </div>
 
         <div class="contenido_principal">
