--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			<h3 class="titulo">Recetas para ti</h3>
 
 
-			<div class="recetas_recomendadas">
+			<div class="recetas_recomendadas contenido">
         <div class="contenido-titulo-controles">
           <h3>Recetas recomendadas</h3>
           <div class="indicadores">
