--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		</nav>
 
 		<main>
-			<h3 class="titulo">Recetas para ti</h3>
+			<h3 class="titulo"> Recetas para ti</h3>
 
 
 			<div class="recetas_recomendadas contenido">
@@ -71,7 +71,28 @@
           <button role="button" id="flecha-izquierda" class="flecha-izquierda"><i class="fas 
             fa-angle-left"></i></button>
 
-            
+            <div class="contenido-carrusel">
+              <div class="carrusel">
+                <div class="receta">
+                  <a href="#" class="imagen"><img src="imagenes/1.jpg" alt=""></a>
+                </div>
+                <div class="receta">
+                  <a href="#" class="imagen"><img src="imagenes/2.jpg" alt=""></a>
+                </div>
+                <div class="receta">
+                  <a href="#" class="imagen"><img src="imagenes/3.jpg" alt=""></a>
+                </div>
+                <div class="receta">
+                  <a href="#" class="imagen"><img src="imagenes/4.jpg" alt=""></a>
+                </div>
+                <div class="receta">
+                  <a href="#" class="imagen"><img src="imagenes/5.jpg" alt=""></a>
+                </div>
+                <div class="receta">
+                  <a href="#" class="imagen"><img src="imagenes/6.jpg" alt=""></a>
+                </div>
+              </div> 
+            </div>
 
           <button role="button" id="flecha-derecha" class="flecha-derecha"><i class="fas 
             fa-angle-right"></i></button>
