--- a/index.html
+++ b/index.html
@@ -91,6 +91,27 @@
                 <div class="receta">
                   <a href="#" class="imagen"><img src="imagenes/6.jpg" alt=""></a>
                 </div>
+                <div class="receta">
+                  <a href="#" class="imagen"><img src="imagenes/7.jpg" alt=""></a>
+                </div>
+                <div class="receta">
+                  <a href="#" class="imagen"><img src="imagenes/8.jpg" alt=""></a>
+                </div>
+                <div class="receta">
+                  <a href="#" class="imagen"><img src="imagenes/9.jpg" alt=""></a>
+                </div>
+                <div class="receta">
+                  <a href="#" class="imagen"><img src="imagenes/10.jpg" alt=""></a>
+                </div>
+                <div class="receta">
+                  <a href="#" class="imagen"><img src="imagenes/11.jpg" alt=""></a>
+                </div>
+                <div class="receta">
+                  <a href="#" class="imagen"><img src="imagenes/12.jpg" alt=""></a>
+                </div>
+                <div class="receta">
+                  <a href="#" class="imagen"><img src="imagenes/13.jpg" alt=""></a>
+                </div>
               </div> 
             </div>
 
