--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="contenido-carrusel">
               <div class="carrusel">
                 <div class="receta">
-                  <a href="#" class="imagen"><img src="imagenes/1.jpg" alt=""></a>
+                  <a href="#perfil.html" class="imagen"><img src="imagenes/1.jpg" alt=""></a>
                 </div>
                 <div class="receta">
                   <a href="#" class="imagen"><img src="imagenes/2.jpg" alt=""></a>
